@@ -380,6 +380,9 @@ BUGFIXES:
   ZOOKEEPER-2172: Cluster crashes when reconfig a new node as a participant
   (Arshad Mohammad via phunt)
 
+  ZOOKEEPER-2484: Flaky Test: org.apache.zookeeper.test.LoadFromLogTest.testLoadFailure
+  (Michael Han via phunt)
+
 IMPROVEMENTS:
   ZOOKEEPER-2024 Major throughput improvement with mixed workloads (Kfir Lev-Ari via shralex)
 
